--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,29 @@
 asgiref==3.4.1
+autopep8==1.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+cloudinary==1.29.0
 Django==4.0
-sqlparse==0.4.2
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.11.0
+django-environ==0.8.1
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.0.0
+djongo==1.3.6
+dnspython==2.2.1
+idna==3.3
+numpy==1.22.3
+Pillow==8.4.0
+pycodestyle==2.8.0
+PyJWT==2.3.0
+pymongo==3.12.3
+python-snappy==0.6.1
+pytz==2021.3
+requests==2.27.1
+six==1.16.0
+sqlparse==0.2.4
+toml==0.10.2
 tzdata==2021.5
+urllib3==1.26.8
+whitenoise==5.3.0
+winkerberos==0.8.0
