--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 djongo==1.3.6
 dnspython==2.2.1
+gunicorn==20.1.0
 idna==3.3
 numpy==1.22.3
 Pillow==8.4.0
