--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ autopep8==1.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 cloudinary==1.29.0
+dj-database-url==0.5.0
 Django==4.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.11.0
 django-environ==0.8.1
+django-heroku==0.3.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 djongo==1.3.6
@@ -15,6 +17,7 @@ gunicorn==20.1.0
 idna==3.3
 numpy==1.22.3
 Pillow==8.4.0
+psycopg2==2.9.3
 pycodestyle==2.8.0
 PyJWT==2.3.0
 pymongo==3.12.3
