--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,9 @@ djongo==1.3.6
 dnspython==2.2.1
 gunicorn==20.1.0
 idna==3.3
-numpy==1.22.3
+# numpy==1.22.3
 Pillow==8.4.0
-psycopg2==2.9.3
+# psycopg2==2.9.3
 pycodestyle==2.8.0
 PyJWT==2.3.0
 pymongo==3.12.3
