--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 cloudinary==1.29.0
 dj-database-url==0.5.0
-Django==4.0
+django==4.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==3.11.0
 django-environ==0.8.1
